<resources>
    <string name="app_name">Fragment Estáticos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="esta_es_una_lista">Esta es una lista</string>
    <string name="textview">TextView</string>
    <string name="casa">* Casa</string>
    <string name="arbol">* arbol</string>
    <string name="avion">* avion</string>
    <string name="esto_es_una_imagen">Esto es un boton</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="click">Click</string>
    <string name="boton">Boton</string>
</resources>