<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"

    tools:context=".FragmentAzul">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        tools:ignore="UseCompoundDrawables,UselessParent">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/esto_es_una_imagen" />

        <Button
            android:id="@+id/buttonclick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton" />

        <TextView
            android:visibility="invisible"
            android:id="@+id/click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/click" />


    </LinearLayout>

</FrameLayout>